<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Reg_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFF4D0"
    android:orientation="vertical"
    tools:context=".FormActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/registration"
        android:textSize="30sp"
        android:textColor="#000000"/>

    <EditText
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/full_name"
        android:id="@+id/Fullname"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:textSize="20sp"
        />

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_gravity="start"-->
<!--        android:text="@string/select_gender"-->

<!--        android:textColor="#000000"-->
<!--        android:textSize="20sp"-->
<!--        />-->
<!--    <Spinner-->
<!--        android:id="@+id/spinner1"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@android:drawable/btn_dropdown"-->
<!--        android:spinnerMode="dropdown"/>-->




    <EditText
        android:id="@+id/email"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_id"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/password1"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:hint="@string/password"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/rePassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:textAlignment="center"
        android:textSize="20sp"
        />


    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/enter_10_digit_mobile_no"
        android:id="@+id/mobileNo"
        android:textAlignment="center"
        android:inputType="phone"
        android:textSize="20sp"
        android:autofillHints="@string/MobileN" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/codeEnter"
        android:textAlignment="center"
        android:hint="Enter OTP"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        >

    </EditText>

    <Button
        android:id="@+id/nextBtn"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="Verify"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/button"/>


</LinearLayout>