<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/police_logo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFF4D0"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/police"
        android:layout_width="234dp"
        android:layout_height="206dp"
        android:src="@drawable/mpp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="#2f2519"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/police"
        app:layout_constraintVertical_bias="0.426" />

    <TextView
        android:id="@+id/textView_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_are_happy_to_help_you"
        android:textColor="#2f2519"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_welcome"
        app:layout_constraintVertical_bias="0.29" />

    <TextView
        android:id="@+id/textView_mymess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:text="@string/please_select_the_service"
        android:textColor="#2f2519"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_message"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/mpcop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mpcop"
        android:textColor="#2f2519"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/police"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>