<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFF4D0"
    tools:context=".Lost_article">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/mpp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/complainant_s_details"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/complainant_s_name"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_marginLeft="@dimen/activity_vertical_margin"/>

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:autofillHints="Ex Ram Singh"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/father_s_husband_s_guardian_s_name"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_marginStart="@dimen/activity_vertical_margin"/>
        <EditText
            android:id="@+id/editTextTextGuardianName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:autofillHints="Ex Shyam Singh"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/address"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_marginStart="@dimen/activity_vertical_margin"/>
        <EditText
            android:id="@+id/editTextTextAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mobile_no"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_marginStart="@dimen/activity_vertical_margin"/>
        <EditText
            android:id="@+id/editTextTextMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/email_idnew"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_marginStart="@dimen/activity_vertical_margin"/>
        <EditText
        android:id="@+id/editTextTextEMAIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/description_address_of_place_of_loss"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_marginStart="@dimen/activity_vertical_margin"/>

        <EditText
            android:id="@+id/editTextTextMultiLine6"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/time"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textAlignment="center"/>
        <EditText
            android:id="@+id/editTextTextFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:text="FROM:"
            android:textSize="15sp"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
        <EditText
            android:id="@+id/editTextTextTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:text="TO:"
            android:textSize="15sp"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="District"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_marginStart="@dimen/activity_vertical_margin"/>
        <EditText
            android:id="@+id/editTextText_district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Police Station"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_marginStart="@dimen/activity_vertical_margin"/>
        <EditText
            android:id="@+id/editTextText_policestn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SUBMIT REQUEST"
            android:textSize="20sp"
            android:background="#FFC107"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"/>



    </LinearLayout>
</ScrollView>